<resources>
    <string name="app_name">Weather</string>
    
    <string name="frg_main__label">Main Fragment</string>
    <string name="frg_setting__label">Setting</string>
    <string name="frg_manage_cities__label">City</string>
    <string name="feels_like">Feels like</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="clouds">Clouds</string>
    <string name="visibility">Visibility</string>
    <string name="air_pressure">Air pressure</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="description_back">description_back</string>
    <string name="city">City</string>
    <string name="manage_cities">Manage Cities</string>

    <string name="celsius">°C</string>
    <string name="percent">%</string>
    <string name="meters_to_seconds">\" m/s\"</string>
    <string name="kilometer">\" km\"</string>
    <string name="hectopascal">\" hPha\"</string>
    <string name="add_new_city">Add new city</string>
    <string name="no_city_added">No city added</string>
    <string name="empty_list">Empty list</string>
    <string name="search_hint">Enter a place name</string>
    <string name="add_city">Add city</string>
    <string name="current_location">Current location</string>

    <string name="get_current_location_button">Get Current Location</string>
    <string name="click_on_button_to_get_current_location_output">Click button above for current location.\n(Results will show below.)</string>

    <string name="ok">OK</string>
    <string name="settings">Settings</string>

    <string name="fine_location_permission_rationale">The fine location permission is needed for core functionality.</string>
    <string name="fine_permission_denied_explanation">Fine location permission was denied but is needed for core functionality.</string>
    <string name="permission_approved_explanation">You approved FINE location, carry (and click) on!</string>
</resources>