<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/design_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingTop="32dp"
    tools:context=".screens.manage_cities.ManageCitiesFragment">

    <Button
        android:id="@+id/add_current_location"
        style="@style/TextView.Medium.Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_input"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/current_location" />

    <SearchView
        android:id="@+id/search"
        style="@style/TextView.Small.Black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_input"
        android:gravity="center_vertical|start"
        android:hint="@string/search_hint"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:lines="1"
        tools:ignore="Autofill,InefficientWeight,TextContrastCheck" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:fillViewport="true"
        android:paddingBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/empty_view"
                style="@style/TextView.Medium.Black"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/empty_list"
                android:visibility="gone" />

            <com.todkars.shimmer.ShimmerRecyclerView
                android:id="@+id/search_list_shimmer"
                style="@style/Recycler.Vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/item_search_location_weather" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
