<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_transparent"
    android:orientation="vertical"
    tools:background="@drawable/background_gradient_anim"
    tools:context=".screens.main.MainFragment">

    <include
        android:id="@+id/frg_main__layout_toolbar"
        layout="@layout/include_toolbar" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="8dp">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill_vertical"
            android:fillViewport="true"
            android:overScrollMode="never">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="24dp">

                <TextView
                    android:id="@+id/frg_main__current_temp_num"
                    style="@style/TextView.VERY_BIG"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="300dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="13" />

                <TextView
                    android:id="@+id/frg_main__current_temp_type"
                    style="@style/TextView.H1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    app:layout_constraintBottom_toTopOf="@+id/frg_main__current_temp_description"
                    app:layout_constraintStart_toEndOf="@+id/frg_main__current_temp_num"
                    tools:text="°С" />

                <TextView
                    android:id="@+id/frg_main__current_temp_description"
                    style="@style/TextView.H1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/frg_main__current_temp_num"
                    app:layout_constraintStart_toEndOf="@+id/frg_main__current_temp_num"
                    tools:text="Description" />

                <TextView
                    android:id="@+id/frg_main__current_data"
                    style="@style/TextView.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/frg_main__current_temp_num"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="Current data" />

                <com.todkars.shimmer.ShimmerRecyclerView
                    android:id="@+id/frg_main__hourly_temp_rv"
                    style="@style/Recycler.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/frg_main__current_data"
                    tools:listitem="@layout/item_hourly_weather" />

                <View
                    android:id="@+id/divider_after_hourly_temp_rv"
                    style="@style/Divider.Horizontal"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/frg_main__hourly_temp_rv"
                    tools:ignore="MissingConstraints" />

                <com.todkars.shimmer.ShimmerRecyclerView
                    android:id="@+id/frg_main__daily_temp_rv"
                    style="@style/Recycler.Vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/divider_after_hourly_temp_rv"
                    tools:layout_editor_absoluteX="0dp"
                    tools:listitem="@layout/item_daily_weather" />

                <View
                    android:id="@+id/divider_after_daily_temp_rv"
                    style="@style/Divider.Horizontal"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/frg_main__daily_temp_rv"
                    tools:ignore="MissingConstraints" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/frg_main__daily_temp_rv">

                    <TableRow android:layout_margin="16dp">

                        <LinearLayout
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                style="@style/TextView.Small"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/feels_like"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/frg_main__feels_like"
                                style="@style/TextView.Medium"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                tools:text="-9" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                style="@style/TextView.Small"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/humidity"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/frg_main__humidity"
                                style="@style/TextView.Medium"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                tools:text="75%" />
                        </LinearLayout>

                    </TableRow>

                    <TableRow android:layout_margin="16dp">

                        <LinearLayout
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                style="@style/TextView.Small"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/wind"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/frg_main__wind"
                                style="@style/TextView.Medium"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                tools:text="26 km/h" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                style="@style/TextView.Small"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/clouds"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/frg_main__clouds"
                                style="@style/TextView.Medium"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                tools:text="20 %" />
                        </LinearLayout>

                    </TableRow>

                    <TableRow android:layout_margin="16dp">

                        <LinearLayout
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                style="@style/TextView.Small"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/visibility"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/frg_main__visibility"
                                style="@style/TextView.Medium"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                tools:text="12 km" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                style="@style/TextView.Small"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/air_pressure"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/frg_main__air_pressure"
                                style="@style/TextView.Medium"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                tools:text="1030 hPa" />
                        </LinearLayout>

                    </TableRow>

                    <TableRow android:layout_margin="16dp">

                        <LinearLayout
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                style="@style/TextView.Small"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/sunrise"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/frg_main__sunrise"
                                style="@style/TextView.Medium"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                tools:text="09:50"
                                android:textAlignment="center" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                style="@style/TextView.Small"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/sunset"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/frg_main__sunset"
                                style="@style/TextView.Medium"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                tools:text="19:23" />
                        </LinearLayout>

                    </TableRow>

                </TableLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>